Создано с помощью Colaboratory

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPRb6Wne+Vf+KalBveFcoEP",
+      "authorship_tag": "ABX9TyMhjeqbcgSLwV3UxExeJ8Kb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,12 +31,12 @@
       "cell_type": "code",
       "source": [
         "from skimage import io\n",
-        "coins = io.imread('flowers.tif')"
+        "coins = io.imread('trees.tif') # Открытие снимка"
       ],
       "metadata": {
         "id": "NLRmP9U380i_"
       },
-      "execution_count": 49,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -50,15 +50,15 @@
       "metadata": {
         "id": "FZ8fjmX-9QIO"
       },
-      "execution_count": 50,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "hist = np.histogram(coins, bins=np.arange(0, 256))\n",
-        "fig, (ax1) = plt.subplots()\n",
-        "ax1.imshow(coins, cmap=plt.cm.gray,interpolation='nearest')"
+        "hist = np.histogram(coins, bins=np.arange(0, 256)) # Создание гистрограммы\n",
+        "fig, (ax1) = plt.subplots() # Загрузка гистрограммы в plt\n",
+        "ax1.imshow(coins, cmap=plt.cm.gray,interpolation='nearest') # Отображение графика"
       ],
       "metadata": {
         "colab": {
@@ -66,19 +66,19 @@
           "height": 287
         },
         "id": "ebdYKdG-9RCu",
-        "outputId": "bb69dc90-0297-4a84-d939-9caf139df62f"
+        "outputId": "196b58ec-581b-4b99-eace-d281b7147fc4"
       },
-      "execution_count": 51,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f7783d0f610>"
+              "<matplotlib.image.AxesImage at 0x7f4225267110>"
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -98,9 +98,9 @@
       "cell_type": "code",
       "source": [
         "from skimage.feature import canny\n",
-        "edges = canny(coins/255.)\n",
-        "fig, ax = plt.subplots(figsize=(20, 15))\n",
-        "ax.imshow(edges, cmap=plt.cm.gray, interpolation='nearest')\n",
+        "edges = canny(coins/255.) # Сегментация по границам объекта \n",
+        "fig, ax = plt.subplots(figsize=(20, 15)) # Загрузка гистрограммы в plt\n",
+        "ax.imshow(edges, cmap=plt.cm.gray, interpolation='nearest') # Отображение графика\n",
         "ax.axis('off')\n",
         "ax.set_title('Canny detector')"
       ],
@@ -110,9 +110,9 @@
           "height": 880
         },
         "id": "vubghT7IGjJk",
-        "outputId": "843cc8b5-de5f-4506-f189-42ec5791ef7f"
+        "outputId": "ed5abd5e-b665-4e43-e7e6-1f44d663c546"
       },
-      "execution_count": 61,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -122,7 +122,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -142,9 +142,9 @@
       "cell_type": "code",
       "source": [
         "from scipy import ndimage as ndi\n",
-        "fill_coins = ndi.binary_fill_holes(edges)\n",
-        "fig, ax = plt.subplots(figsize=(20, 15))\n",
-        "ax.imshow(fill_coins, cmap=plt.cm.gray, interpolation='nearest')\n",
+        "fill_coins = ndi.binary_fill_holes(edges) # Установим минимальный размер для допустимых объектов\n",
+        "fig, ax = plt.subplots(figsize=(20, 15)) # Загрузка гистрограммы в plt\n",
+        "ax.imshow(fill_coins, cmap=plt.cm.gray, interpolation='nearest') # Отображение графика\n",
         "ax.axis('off')\n",
         "ax.set_title('Filling the holes')"
       ],
@@ -154,9 +154,9 @@
           "height": 880
         },
         "id": "Id0pUZGaHe8I",
-        "outputId": "5e835d23-4995-44ec-d5f7-e2adeaf0ade9"
+        "outputId": "c8503185-b35e-4c67-b737-aca145b59b75"
       },
-      "execution_count": 62,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +166,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -186,9 +186,9 @@
       "cell_type": "code",
       "source": [
         "from skimage.filters import sobel\n",
-        "elevation_map = sobel(coins)\n",
-        "fig, ax = plt.subplots(figsize=(20, 15))\n",
-        "ax.imshow(elevation_map, cmap=plt.cm.gray, interpolation='nearest')\n",
+        "elevation_map = sobel(coins) # Сегментация по областям изображения\n",
+        "fig, ax = plt.subplots(figsize=(20, 15)) # Загрузка гистрограммы в plt\n",
+        "ax.imshow(elevation_map, cmap=plt.cm.gray, interpolation='nearest') # Отображение графика\n",
         "ax.axis('off')\n",
         "ax.set_title('elevation_map')"
       ],
@@ -198,9 +198,9 @@
           "height": 880
         },
         "id": "8E1cnBSAHl51",
-        "outputId": "5d80f2ea-bc16-4a75-8569-cb5fac3df999"
+        "outputId": "5faaf1dd-affc-4d92-d33f-7214548c5cf4"
       },
-      "execution_count": 63,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +210,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
